<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/background_image"/>

    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="88dp"
            android:layout_height="29dp"
            android:id="@+id/imageView2" android:scaleType="fitCenter"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textColor="@android:color/white"
            android:textSize="18sp" app:fontFamily="@font/montserrat" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="308dp"
            android:layout_height="180dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
        <ToggleButton
                android:text="@string/men_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:textOff="@string/men_s"
                android:textOn="@string/men_s" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white"/>
        <ToggleButton
                android:text="@string/women_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton5" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOff="@string/women_s" android:textOn="@string/women_s"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton6" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed" android:textColor="@android:color/white"
                android:background="@drawable/swoosh_toggle"/>
    </LinearLayout>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/leaguenextBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:textColor="@android:color/white"
            android:background="@drawable/swoosh_button" android:fontFamily="@font/montserrat"
            android:text="@string/next" android:onClick="leagueNextClicked"/>
</android.support.constraint.ConstraintLayout>